Enhance SoccerApp functionality with new features and improvements
- Updated README.md to provide comprehensive project overview and setup instructions.
- Implemented dad joke API endpoint with caching in app.py.
- Added Flask-Caching dependency in requirements.txt.
- Refactored email sender to use environment variables for configuration in send_email.py.
- Expanded unit tests for email validation in test_utils.py.
- Introduced unique filename generation utility in utils.py.
- Styled dad joke display in styles.css and updated index.html to show joke of the day.
- Integrated joke fetching functionality in app.js.
- Improved player name handling in reports.js to accommodate full names.

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -10,6 +10,7 @@
     <header>
         <div class="logo">
             <h1>Soccer Team Management</h1>
+            <p id="joke-of-the-day" class="joke-text">Loading joke...</p>
         </div>
         <nav>
             <ul>
